--- a/Rmd & HTML/Day 1/Day1_2.1.Data Types and Structures.Rmd
+++ b/Rmd & HTML/Day 1/Day1_2.1.Data Types and Structures.Rmd
@@ -1,12 +1,17 @@
 ---
-title: "3.1. Data Types and Structures"
+title: "2.1. Data Types and Structures"
 author: Adapted from Software Carpentry; modified by Maina,Stephanie
-date: "27 October 2017"
+date: "13th of March 2018"
 output: html_document
 ---
+```{r echo=FALSE}
+library(knitr)
+library(rmarkdown)
+```
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r setup, echo=FALSE}
+#opts_chunk$set(echo = FALSE, cache=FALSE)
+read_chunk('/Users/stephdagata/Documents/GitHub/MQ-R-WORKSHOP-2018/Scripts/Day 1/Day1_2.1.Data_Types_and_Structures.R')
 ```
 
 **Questions**
@@ -53,37 +58,37 @@ R provides many functions to examine features of vectors and other objects, for 
   + `length()` - how long is it? What about two dimensional objects?
   + `attributes()` - does it have any metadata?
   
-```{r}
+```{r DT1,echo=TRUE}
 # Example
-x <- "dataset"
-typeof(x)
+#x <- "dataset"
+#typeof(x)
 ```
 
-```{r}
-attributes(x)
+```{r DT2,echo=TRUE,comment=NA}
+#attributes(x)
 ```
 
-```{r}
-y <- 1:10
-y
+```{r DT3,echo=TRUE,comment=NA}
+#y <- 1:10
+#y
 ```
 
-```{r}
-typeof(y)
+```{r DT4,echo=TRUE,comment=NA}
+#typeof(y)
 ```
 
-```{r}
-length(y)
+```{r DT5,echo=TRUE,comment=NA}
+#length(y)
 ```
 
-```{r}
-z <- as.numeric(y)
-z
+```{r DT6,echo=TRUE,comment=NA}
+#z <- as.numeric(y)
+#z
 ```
 
 
-```{r}
-typeof(z)
+```{r DT7,echo=TRUE,comment=NA}
+#typeof(z)
 ```
 
 
@@ -109,68 +114,68 @@ A vector is a collection of elements that are most commonly of mode `character`,
 
 You can create an empty vector with `vector()`. (By default the mode is `logical`. You can be more explicit as shown in the examples below.) It is more common to use direct constructors such as `character()`, `numeric()`, etc.
 
-```{r}
-vector() # an empty 'logical' (the default) vector
+```{r DT8,echo=TRUE,comment=NA}
+#vector() # an empty 'logical' (the default) vector
 ```
 
-```{r}
-vector("character", length = 5) # a vector of mode 'character' with 5 elements
+```{r DT9,echo=TRUE,comment=NA}
+#vector("character", length = 5) # a vector of mode 'character' with 5 elements
 ```
 
-```{r}
-character(5) # the same thing, but using the constructor directly
+```{r DT10,echo=TRUE,comment=NA}
+#character(5) # the same thing, but using the constructor directly
 ```
 
-```{r}
-numeric(5)   # a numeric vector with 5 elements
+```{r DT11,echo=TRUE,comment=NA}
+#numeric(5)   # a numeric vector with 5 elements
 ```
 
-```{r}
-logical(5)   # a logical vector with 5 elements
+```{r DT12,echo=TRUE,comment=NA}
+#logical(5)   # a logical vector with 5 elements
 ```
 
 You can also create vectors by directly specifying their content. R will then guess the appropriate mode of storage for the vector. For instance:
 
-```{r}
-x <- c(1, 2, 3)
+```{r DT13,echo=TRUE,comment=NA}
+#x <- c(1, 2, 3)
 ```
 
 will create a vector `x` of mode `numeric`. These are the most common kind, and are treated as double precision real numbers. If you wanted to explicitly create integers, you need to add an `L` to each element (or coerce to the integer type using `as.integer()`).
 
-```{r}
-x1 <- c(1L, 2L, 3L)
+```{r DT14,echo=TRUE,comment=NA}
+#x1 <- c(1L, 2L, 3L)
 ```
 
 Using `TRUE` and `FALSE` will create a vector of mode `logical`:
 
-```{r}
-y <- c(TRUE, TRUE, FALSE, FALSE)
+```{r DT15,echo=TRUE,comment=NA}
+#y <- c(TRUE, TRUE, FALSE, FALSE)
 ```
 
 While using quoted text will create a vector of mode `| character`:
 
-```{r}
-z <- c("Sarah", "Tracy", "Jon")
+```{r DT16,echo=TRUE,comment=NA}
+#z <- c("Sarah", "Tracy", "Jon")
 ```
 
 ## Examining Vectors
 
 The functions `typeof()`, `length()`, `class()` and `str()` provide useful information about your vectors and R objects in general.
 
-```{r}
-typeof(z)
+```{r DT17,echo=TRUE,comment=NA}
+#typeof(z)
 ```
 
-```{r}
-length(z)
+```{r DT18,echo=TRUE,comment=NA}
+#length(z)
 ```
 
-```{r}
-class(z)
+```{r DT19,echo=TRUE,comment=NA}
+#class(z)
 ```
 
-```{r}
-str(z)
+```{r DT20,echo=TRUE,comment=NA}
+#str(z)
 ```
 
 **Question : Finding commonalities**
@@ -179,89 +184,108 @@ Do you see a property that's common to all these vectors above?
 ## Adding Elements
 The function `c()` (for combine) can also be used to add elements to a vector.
 
-```{r}
-z <- c(z, "Annette")
-z
+```{r DT21,echo=TRUE,comment=NA}
+#z <- c(z, "Annette")
+#z
 ```
-```{r}
-z <- c("Greg", z)
-z
+```{r DT22,echo=TRUE,comment=NA}
+#z <- c("Greg", z)
+#z
 ```
 
 ## Vectors from a Sequence of Numbers
 You can create vectors as a sequence of numbers.
 
-```{r}
-series <- 1:10
-seq(10)
+```{r DT23,echo=TRUE,comment=NA}
+#series <- 1:10
+```
+```{r DT24,echo=TRUE,comment=NA}
+#seq(10)
 ```
 
-```{r}
-seq(from = 1, to = 10, by = 0.1)
+```{r DT25,echo=TRUE,comment=NA}
+#seq(from = 1, to = 10, by = 0.1)
 ```
 
 ## Missing Data
 R supports missing data in vectors. They are represented as `NA` (Not Available) and can be used for all the vector types covered in this lesson:
 
-```{r}
-x <- c(0.5, NA, 0.7)
-x <- c(TRUE, FALSE, NA)
-x <- c("a", NA, "c", "d", "e")
-x <- c(1+5i, 2-3i, NA)
+```{r DT26,echo=TRUE,comment=NA}
+#x <- c(0.5, NA, 0.7)
+```
+```{r DT27,echo=TRUE,comment=NA}
+#x <- c(TRUE, FALSE, NA)
+```
+```{r DT28,echo=TRUE,comment=NA}
+#x <- c("a", NA, "c", "d", "e")
+```
+```{r DT29,echo=TRUE,comment=NA}
+#x <- c(1+5i, 2-3i, NA)
 ```
 
 The function `is.na()` indicates the elements of the vectors that represent missing data, and the function `anyNA()` returns `TRUE` if the vector contains any missing values:
 
-```{r}
-x <- c("a", NA, "c", "d", NA)
-y <- c("a", "b", "c", "d", "e")
-is.na(x)
+```{r DT30,echo=TRUE,comment=NA}
+#x <- c("a", NA, "c", "d", NA)
 ```
 
-```{r}
-is.na(y)
+```{r DT31,echo=TRUE,comment=NA}
+#y <- c("a", "b", "c", "d", "e")
 ```
 
-```{r}
-anyNA(x)
+```{r DT32,echo=TRUE,comment=NA}
+#is.na(x)
 ```
 
-```{r}
-anyNA(y)
+```{r DT33,echo=TRUE,comment=NA}
+#is.na(y)
+```
+
+```{r DT34,echo=TRUE,comment=NA}
+#anyNA(x)
+```
+
+```{r DT35,echo=TRUE,comment=NA}
+#anyNA(y)
 ```
 
 
 ## Other Special Values
 `Inf` is infinity. You can have either positive or negative infinity.
 
-```{r}
-1/0
+```{r DT36,echo=TRUE,comment=NA}
+#1/0
 ```
 
 `NaN` means Not a Number. It's an undefined value.
 
-```{r}
-0/0
+```{r DT37,echo=TRUE,comment=NA}
+#0/0
 ```
 
 ## What Happens When You Mix Types Inside a Vector?
 
 R will create a resulting vector with a mode that can most easily accommodate all the elements it contains. This conversion between modes of storage is called "coercion". When R converts the mode of storage based on its content, it is referred to as "implicit coercion". For instance, can you guess what the following do (without running them first)?
 
-```{r}
-xx <- c(1.7, "a")
-xx <- c(TRUE, 2)
-xx <- c("a", TRUE)
+```{r DT38,echo=TRUE,comment=NA}
+#xx <- c(1.7, "a")
+```
+```{r DT39,echo=TRUE,comment=NA}
+#xx <- c(TRUE, 2)
+```
+
+```{r DT40,echo=TRUE,comment=NA}
+#xx <- c("a", TRUE)
 ```
 
 You can also control how vectors are coerced explicitly using the `as.<class_name>()` functions:
 
-```{r}
-as.numeric("1")
+```{r DT41,echo=TRUE,comment=NA}
+#as.numeric("1")
 ```
 
-```{r}
-as.character(1:2)
+```{r DT42,echo=TRUE,comment=NA}
+#as.character(1:2)
 ```
 
 ## Objects Attributes
@@ -275,64 +299,73 @@ Objects can have **attributes**. Attributes are part of the object. These includ
   
 You can also glean other attribute-like information such as length (works on vectors and lists) or number of characters (for character strings).
 
-```{r}
-length(1:10)
+```{r DT43,echo=TRUE,comment=NA}
+#length(1:10)
 ```
 
-```{r}
-nchar("Software Carpentry")
+```{r DT44,echo=TRUE,comment=NA}
+#nchar("Software Carpentry")
 ```
 
 ## Matrix
 
 In R matrices are an extension of the numeric or character vectors. They are not a separate type of object but simply an atomic vector with dimensions; the number of rows and columns.
 
-```{r}
-m <- matrix(nrow = 2, ncol = 2)
-m
+```{r DT45,echo=TRUE,comment=NA}
+#m <- matrix(nrow = 2, ncol = 2)
+#m
 ```
-```{r}
-dim(m)
+```{r DT46,echo=TRUE,comment=NA}
+#dim(m)
 ```
 
 Matrices in R are filled column-wise.
 
-```{r}
-m <- matrix(1:6, nrow = 2, ncol = 3)
+```{r DT47,echo=TRUE,comment=NA}
+#m <- matrix(1:6, nrow = 2, ncol = 3)
 ```
 
 Other ways to construct a matrix
 
-```{r}
-m      <- 1:10
-dim(m) <- c(2, 5)
+```{r DT48,echo=TRUE,comment=NA}
+#m <- 1:10
+```
+
+```{r DT49,echo=TRUE,comment=NA}
+#dim(m) <- c(2, 5)
 ```
 
 This takes a vector and transforms it into a matrix with 2 rows and 5 columns.
 
 Another way is to bind columns or rows using `cbind()` and `rbind()`.
 
-```{r}
-x <- 1:3
-y <- 10:12
-cbind(x, y)
+```{r DT50,echo=TRUE,comment=NA}
+#x <- 1:3
 ```
 
-```{r}
-rbind(x, y)
+```{r DT51,echo=TRUE,comment=NA}
+#y <- 10:12
+```
+
+```{r DT52,echo=TRUE,comment=NA}
+#cbind(x, y)
+```
+
+```{r DT53,echo=TRUE,comment=NA}
+#rbind(x, y)
 ```
 
 You can also use the `byrow` argument to specify how the matrix is filled. From R's own documentation:
 
-```{r}
-mdat <- matrix(c(1,2,3, 11,12,13), nrow = 2, ncol = 3, byrow = TRUE)
-mdat
+```{r DT54,echo=TRUE,comment=NA}
+#mdat <- matrix(c(1,2,3, 11,12,13), nrow = 2, ncol = 3, byrow = TRUE)
+#mdat
 ```
 
 Elements of a matrix can be referenced by specifying the index along each dimension (e.g. "row" and "column") in single square brackets.
 
-```{r}
-mdat[2,3]
+```{r DT55,echo=TRUE,comment=NA}
+#mdat[2,3]
 ```
 
 ## List
@@ -342,28 +375,34 @@ A list is a special type of vector. Each element can be a different type.
 
 Create lists using `list()` or coerce other objects using `as.list()`. An empty list of the required length can be created using `vector()`
 
-```{r}
-x <- list(1, "a", TRUE, 1+4i)
-x
+```{r DT56,echo=TRUE,comment=NA}
+#x <- list(1, "a", TRUE, 1+4i)
+#x
 ```
 
-```{r}
-x <- vector("list", length = 5) ## empty list
-length(x)
+```{r DT57,echo=TRUE,comment=NA}
+#x <- vector("list", length = 5) ## empty list
+#length(x)
 ```
 
 The content of elements of a list can be retrieved by using double square brackets.
 
-```{r}
-x[[1]]
+```{r DT58,echo=TRUE,comment=NA}
+#x[[1]]
 ```
 
 Vectors can be coerced to lists as follows:
 
-```{r}
-x <- 1:10
-x <- as.list(x)
-length(x)
+```{r DT59,echo=TRUE,comment=NA}
+#x <- 1:10
+```
+
+```{r DT60,echo=TRUE,comment=NA}
+#x <- as.list(x)
+```
+
+```{r DT61,echo=TRUE,comment=NA}
+#length(x)
 ```
 
   + 1. What is the class of x[1]?
@@ -371,13 +410,13 @@ length(x)
   
 Elements of a list can be named (i.e. lists can have the names atttibute)
 
-```{r}
-xlist <- list(a = "Karthik Ram", b = 1:10, data = head(iris))
-xlist
+```{r DT62,echo=TRUE,comment=NA}
+#xlist <- list(a = "Karthik Ram", b = 1:10, data = head(iris))
+#xlist
 ```
 
-```{r}
-names(xlist)
+```{r DT63,echo=TRUE,comment=NA}
+#names(xlist)
 ```
 
   + 1. What is the length of this object? What about its structure?
@@ -408,9 +447,9 @@ Some additional information on data frames:
 
 To create data frames by hand:
 
-```{r}
-dat <- data.frame(id = letters[1:10], x = 1:10, y = 11:20)
-dat
+```{r DT64,echo=TRUE,comment=NA}
+#dat <- data.frame(id = letters[1:10], x = 1:10, y = 11:20)
+#dat
 ```
 
 ####  Useful Data Frame Functions
@@ -426,27 +465,27 @@ dat
 
 See that it is actually a special list:
 
-```{r}
-is.list(dat)
+```{r DT65,echo=TRUE,comment=NA}
+#is.list(dat)
 ```
 
-```{r}
-class(dat)
+```{r DT66,echo=TRUE,comment=NA}
+#class(dat)
 ```
 
 Because data frames are rectangular, elements of data frame can be referenced by specifying the row and the column index in single square brackets (similar to matrix).
 
-```{r}
-dat[1,3]
+```{r DT67,echo=TRUE,comment=NA}
+#dat[1,3]
 ```
 
 As data frames are also lists, it is possible to refer to columns (which are elements of such list) using the list notation, i.e. either double square brackets or a `$`.
 
-```{r}
-dat[["y"]]
+```{r DT68,echo=TRUE,comment=NA}
+#dat[["y"]]
 ```
-```{r}
-dat$y
+```{r DT69,echo=TRUE,comment=NA}
+#dat$y
 ```
 
 The following table summarizes the one-dimensional and two-dimensional data structures in R in relation to diversity of data types they can contain.
@@ -465,14 +504,12 @@ Knowing that data frames are lists, can columns be of different type?
 
 What type of structure do you expect to see when you explore the structure of the `iris` data frame? Hint: Use `str()`.
 
-```{r}
-# The Sepal.Length, Sepal.Width, Petal.Length and Petal.Width columns are all
-# numeric types, while Species is a Factor.
-# Lists can have elements of different types.
-# Since a Data Frame is just a special type of list, it can have columns of
-# differing type (although, remember that type must be consistent within each column!).
-str(iris)
+```{r DT70,echo=TRUE,comment=NA}
+#str(iris)
 ```
+The Sepal.Length, Sepal.Width, Petal.Length and Petal.Width columns are all numeric types, while Species is a Factor.
+Lists can have elements of different types.Since a Data Frame is just a special type of list, it can have columns of
+differing type (although, remember that type must be consistent within each column!).
 
 # Key Points
 
