--- a/Rmd & HTML/Day 1/Day1_2.2.Understanding factors.Rmd
+++ b/Rmd & HTML/Day 1/Day1_2.2.Understanding factors.Rmd
@@ -1,13 +1,20 @@
 ---
-title: "3.2. Understanding factors"
+title: "2.2. Understanding factors"
 author: Adapted from Software Carpentry; modified by Maina,Stephanie
-date: "27 October 2017"
+date: "13th of March 2018"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r echo=FALSE}
+library(knitr)
+library(rmarkdown)
 ```
+
+```{r setup, echo=FALSE}
+opts_chunk$set(echo = FALSE, cache=FALSE)
+read_chunk('/Users/stephdagata/Documents/GitHub/MQ-R-WORKSHOP-2018/Scripts/Day 1/Day1_1.1.Preliminaries&Software installation.R')
+```
+
 ## understanding factors
 
 ** Questions** 
@@ -32,42 +39,51 @@ Once created, factors can only contain a pre-defined set values, known as levels
 
 The `factor()` command is used to create and modify factors in R:
 
-```{r}
+```{r UF1,echo=TRUE,comment=NA}
 sex <- factor(c("male", "female", "female", "male"))
 ```
 
 R will assign `1` to the level `"female"` and `2` to the level `"male"` (because `f` comes before `m`, even though the first element in this vector is `"male"`). You can check this by using the function `levels()`, and check the number of levels using `nlevels()`:
 
-```{r}
+```{r UF2,echo=TRUE,comment=NA}
 levels(sex)
 ```
 
-```{r}
+```{r UF3,echo=TRUE,comment=NA}
 nlevels(sex)
 ```
 
 Sometimes, the order of the factors does not matter, other times you might want to specify the order because it is meaningful (e.g., "low", "medium", "high") or it is required by particular type of analysis. Additionally, specifying the order of the levels allows us to compare levels:
 
-```{r}
+```{r UF4,echo=TRUE,comment=NA}
 food <- factor(c("low", "high", "medium", "high", "low", "medium", "high"))
+```
+
+```{r UF5,echo=TRUE,comment=NA}
 levels(food)
 ```
 
-```{r}
+```{r UF6,echo=TRUE,comment=NA}
 food <- factor(food, levels = c("low", "medium", "high"))
+```
+
+```{r UF7,echo=TRUE,comment=NA}
 levels(food)
 ```
 
-```{r eval=F}
+```{r UF8,echo=TRUE,comment=NA,error=T}
 min(food) ## doesn't work
 ```
 
-```{r}
+```{r UF9,echo=TRUE,comment=NA}
 food <- factor(food, levels = c("low", "medium", "high"), ordered=TRUE)
+```
+
+```{r UF10,echo=TRUE,comment=NA}
 levels(food)
 ```
 
-```{r}
+```{r UF11,echo=TRUE,comment=NA}
 min(food) ## works!
 ```
 
@@ -92,8 +108,11 @@ What is the best way to represent this in R?
 
 Converting from a factor to a number can cause problems:
 
-```{r}
+```{r UF12,echo=TRUE,comment=NA}
 f <- factor(c(3.4, 1.2, 5))
+```
+
+```{r UF13,echo=TRUE,comment=NA}
 as.numeric(f)
 ```
 
@@ -101,100 +120,17 @@ This does not behave as expected (and there is no warning).
 
 The recommended way is to use the integer vector to index the factor levels:
 
-```{r}
+```{r UF14,echo=TRUE,comment=NA}
 levels(f)[f]
 ```
 
 This returns a character vector, the `as.numeric()` function is still required to convert the values to the proper type (numeric).
 
-```{r}
+```{r UF15,echo=TRUE,comment=NA}
 f <- levels(f)[f]
+```
+
+```{r UF16,echo=TRUE,comment=NA}
 f <- as.numeric(f)
 ```
-
-## Using Factors
-
-Lets load our example data to see the use of factors:
-
-```{r}
-dat <- read.csv(file = 'data/sample.csv', stringsAsFactors = TRUE)
-```
-
-## Default Behavior
-
-`stringsAsFactors=TRUE` is the default behavior for R. We could leave this argument out. It is included here for clarity.
-
-```{r}
-str(dat)
-```
-Notice the first 3 columns have been converted to factors. These values were text in the data file so R automatically interpreted them as categorical variables.
-
-```{r}
-summary(dat)
-```
-
-Notice the `summary()` function handles factors differently to numbers (and strings), the occurrence counts for each value is often more useful information.
-
-The `summary()` Function
-
-The `summary()` function is a great way of spotting errors in your data (look at the dat$Gender column). It's also a great way for spotting missing data.
-Reordering Factors
-
-The function `table()` tabulates observations and can be used to create bar plots quickly. For instance:
-
-```{r}
-table(dat$Group)
-```
-
-```{r}
-barplot(table(dat$Group))
-```
-
-Use the `factor()` command to modify the column dat$Group so that the control group is plotted last
-
-
-## Removing Levels from a Factor
-Some of the Gender values in our dataset have been coded incorrectly. Let's remove factors.
-
-```{r}
-barplot(table(dat$Gender))
-```
-
-Values should have been recorded as lowercase 'm' & 'f'. We should correct this.
-
-```{r}
-dat$Gender[dat$Gender == 'M'] <- 'm'
-```
-
-## Updating Factors
-
-```{r}
-plot(x = dat$Gender, y = dat$BloodPressure)
-```
-
-  + Why does this plot show 4 levels?
-*Hint* how many levels does dat$Gender have?
-
-We need to tell R that "M" is no longer a valid value for this column. We use the `droplevels()` function to remove extra levels.
-
-```{r}
-dat$Gender <- droplevels(dat$Gender)
-plot(x = dat$Gender, y = dat$BloodPressure)
-```
-
-## Adjusting Factor Levels
-
-Adjusting the `levels()` of a factor provides a useful shortcut for reassigning values in this case.
-
-```{r}
-levels(dat$Gender)[2] <- 'f'
-plot(x = dat$Gender, y = dat$BloodPressure)
-```
-
-# Key Points
-
-  + Factors are used to represent categorical data.
-  + Factors can be ordered or unordered.
-  + Some R functions have special methods for handling factors.
-
 
